[gd_scene load_steps=4 format=3 uid="uid://dsp53xycd7vl6"]

[ext_resource type="Script" uid="uid://d1bd5cevg61k0" path="res://scripts/hud.gd" id="1_s3k51"]
[ext_resource type="Texture2D" uid="uid://5u4yy2hfgvnn" path="res://Asset/sprite/hudHeart_full.png" id="2_pvgpj"]
[ext_resource type="FontFile" uid="uid://d2k2424mh48k1" path="res://Asset/ColaKind.otf" id="3_nhyt6"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_s3k51")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 6.0
offset_right = 1154.0
offset_bottom = 154.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Hearts" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Heart1" type="TextureRect" parent="MarginContainer/HBoxContainer/Hearts"]
layout_mode = 2
texture = ExtResource("2_pvgpj")

[node name="Heart2" type="TextureRect" parent="MarginContainer/HBoxContainer/Hearts"]
layout_mode = 2
texture = ExtResource("2_pvgpj")

[node name="Heart3" type="TextureRect" parent="MarginContainer/HBoxContainer/Hearts"]
layout_mode = 2
texture = ExtResource("2_pvgpj")

[node name="TimeBar" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_direction = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nhyt6")
theme_override_font_sizes/font_size = 30
value = 100.0

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.26479155, 1)
theme_override_fonts/font = ExtResource("3_nhyt6")
theme_override_font_sizes/font_size = 40
text = "Time: 60.0s"

[node name="KillLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.26479155, 1)
theme_override_fonts/font = ExtResource("3_nhyt6")
theme_override_font_sizes/font_size = 40
text = "Chaser: 0 
Shooter: 0"
horizontal_alignment = 2
